GET /comments?filter=voted_by_me works
